// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`runs correctly for left 1`] = `
<div
  className="nav-button"
>
  <SvgBack
    className="nav-icon"
  />
</div>
`;

exports[`runs correctly for right 1`] = `
<div
  className="nav-button"
>
  <SvgForward
    className="nav-icon"
  />
</div>
`;
